# recipes-ai-app

./: .bumpversion.cfg  .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  WARP.md  app.py  install-agent.sh  main.py  pyproject.toml  requirements.txt  session.py
.claude/: settings.local.json
.cursor/: init.md
.cursor/bugs/: 1-CLOSED-when-running-dry-run-for-cfs-sync-it-should-not-prompt-you-for-resolving-github-vs-cfs-conflicts.md  1-when-running-dry-run-for-cfs-sync-it-should-not-prompt-you-for-resolving-github-vs-cfs-conflicts.md  2-DONE-recipe-match-threshold-is-too-low.md  (+1 more)
.cursor/features/: 3-DONE-rate-the-recipes.md  (+21 more)
.streamlit/: config.toml  secrets.toml.example
baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
baml_src/: clients.baml  recipe.baml
data/: combined_recipes.py  recipes_for_vector_db.py  seeds.py  target_document_format.md
scripts/: combine_recipe_datasets.py  llm_classifier.py  migrate_index_to_dotproduct.py  prepare_for_vector_db.py  transform_recipes.py
tests/: test_mvp.py  test_prepare_for_vector_db.py  test_prompt_injection.py  test_session.py  test_sparse_helper.py  test_transform_recipes.py
utils/: __init__.py  embedding_helper.py  llm_helper.py  response_formatter.py  sparse_helper.py
v2/: CaribbeanChickenExampleBAMLOutput.json  UltimateChocolateChipCookieExample.json  _processed_manifest.json  dietary_preferences.md  main.py  process_recipes.py  recipes_for_vector_db.py
validation/: __init__.py  detector.py  sanitizer.py
(+164 files in other folders)
