[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.bump2version]
current_version = "0.1.0"
commit = true
tag = true
files = ["pyproject.toml"]

[project]
name = "recipes-ai-app"
version = "0.1.0"
description = "Recipe chatbot using RAG with Pinecone vector database"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Graham Nessler"}
]
keywords = ["rag", "pinecone", "recipes", "chatbot", "vector-database", "baml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "pinecone-client>=3.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "baml-py>=0.218.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "bump2version>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests", "v2/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
